poc/tests/errors/test_FplVariableAlreadyDeclared_class_09.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            x: Nat

            optional Nat TestProperty()
            {
                x: Int
                self:=x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:11:17: The name 'x' was already declared in the current context at (7,13)